修复格式化